--- a/src/omari/hamza/views/compression_window.fxml
+++ b/src/omari/hamza/views/compression_window.fxml
@@ -13,63 +13,73 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #3f4045;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="omari.hamza.controllers.CompressionWindowController">
-   <children>
-      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="14.0" layoutY="361.0" onMouseClicked="#actionReturn" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../res/reply.png" />
-         </image>
-         <cursor>
-            <Cursor fx:constant="CLOSED_HAND" />
-         </cursor>
-      </ImageView>
-      <VBox fx:id="inputLayout" alignment="CENTER_RIGHT" layoutX="148.0" prefHeight="400.0">
-         <children>
-            <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity">
-               <children>
-                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Output file name:">
-                     <HBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </HBox.margin>
-                  </Text>
-                  <TextField fx:id="fileNameTextField" prefWidth="150.0" style="-fx-background-color: #333438; -fx-text-fill: #ffffff;" />
-               </children>
-               <VBox.margin>
-                  <Insets bottom="20.0" top="40.0" />
-               </VBox.margin>
-            </HBox>
-            <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity">
-               <children>
-                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Compression Algorithm: ">
-                     <HBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </HBox.margin>
-                  </Text>
-                  <JFXComboBox fx:id="algorithmComboBox" prefWidth="150.0" promptText="Select an option" style="-fx-text-fill: #ffffff; -fx-prompt-text-fill: #ffffff;" />
-               </children>
-               <VBox.margin>
-                  <Insets bottom="20.0" />
-               </VBox.margin>
-            </HBox>
-            <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
-               <children>
-                  <JFXButton fx:id="decompressButton" onAction="#actionDecompress" style="-fx-background-color: #ffffff; -fx-border-color: #3f4045;" text="Decompress" textFill="#3f4045">
-                     <HBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </HBox.margin>
-                  </JFXButton>
-                  <JFXButton fx:id="compressButton" onAction="#actionCompress" style="-fx-background-color: #ffffff; -fx-border-color: #3f4045;" text="Compress" textFill="#3f4045">
-                     <HBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </HBox.margin>
-                  </JFXButton>
-               </children>
-               <VBox.margin>
-                  <Insets top="20.0" />
-               </VBox.margin>
-            </HBox>
-         </children>
-      </VBox>
-      <JFXSpinner fx:id="progressBar" layoutX="275.0" layoutY="175.0" visible="false" />
-   </children>
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="600.0"
+            style="-fx-background-color: #3f4045;" xmlns="http://javafx.com/javafx/11.0.1"
+            fx:controller="omari.hamza.controllers.CompressionWindowController">
+    <children>
+        <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="14.0" layoutY="361.0" onMouseClicked="#actionReturn"
+                   pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@../res/reply.png"/>
+            </image>
+            <cursor>
+                <Cursor fx:constant="CLOSED_HAND"/>
+            </cursor>
+        </ImageView>
+        <VBox fx:id="inputLayout" alignment="CENTER_RIGHT" layoutX="148.0" prefHeight="400.0">
+            <children>
+                <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+                      minWidth="-Infinity">
+                    <children>
+                        <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Output file name:">
+                            <HBox.margin>
+                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                            </HBox.margin>
+                        </Text>
+                        <TextField fx:id="fileNameTextField" prefWidth="150.0"
+                                   style="-fx-background-color: #333438; -fx-text-fill: #ffffff;"/>
+                    </children>
+                    <VBox.margin>
+                        <Insets bottom="20.0" top="40.0"/>
+                    </VBox.margin>
+                </HBox>
+                <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity">
+                    <children>
+                        <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Compression Algorithm: ">
+                            <HBox.margin>
+                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                            </HBox.margin>
+                        </Text>
+                        <JFXComboBox fx:id="algorithmComboBox" prefWidth="150.0" promptText="Select an option"
+                                     style="-fx-text-fill: #ffffff; -fx-prompt-text-fill: #ffffff;"/>
+                    </children>
+                    <VBox.margin>
+                        <Insets bottom="20.0"/>
+                    </VBox.margin>
+                </HBox>
+                <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+                    <children>
+                        <JFXButton fx:id="decompressButton" onAction="#actionDecompress"
+                                   style="-fx-background-color: #ffffff; -fx-border-color: #3f4045;" text="Decompress"
+                                   textFill="#3f4045">
+                            <HBox.margin>
+                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                            </HBox.margin>
+                        </JFXButton>
+                        <JFXButton fx:id="compressButton" onAction="#actionCompress"
+                                   style="-fx-background-color: #ffffff; -fx-border-color: #3f4045;" text="Compress"
+                                   textFill="#3f4045">
+                            <HBox.margin>
+                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                            </HBox.margin>
+                        </JFXButton>
+                    </children>
+                    <VBox.margin>
+                        <Insets top="20.0"/>
+                    </VBox.margin>
+                </HBox>
+            </children>
+        </VBox>
+        <JFXSpinner fx:id="progressBar" layoutX="275.0" layoutY="175.0" visible="false"/>
+    </children>
 </AnchorPane>
