--- a/src/omari/hamza/views/compression_window.fxml
+++ b/src/omari/hamza/views/compression_window.fxml
@@ -3,18 +3,15 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXSpinner?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.Cursor?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Text?>
-
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="600.0"
-            style="-fx-background-color: #3f4045;" xmlns="http://javafx.com/javafx/11.0.1"
+            style="-fx-background-color: #3f4045;" xmlns="http://javafx.com/javafx/8.0.172-ea"
             fx:controller="omari.hamza.controllers.CompressionWindowController">
     <children>
         <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="14.0" layoutY="361.0" onMouseClicked="#actionReturn"
@@ -50,8 +47,9 @@
                                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
                             </HBox.margin>
                         </Text>
-                        <JFXComboBox fx:id="algorithmComboBox" prefWidth="150.0" promptText="Select an option"
-                                     style="-fx-text-fill: #ffffff; -fx-prompt-text-fill: #ffffff;"/>
+                        <JFXComboBox fx:id="algorithmComboBox" focusColor="WHITE" prefWidth="150.0"
+                                     promptText="Select an option" style="-fx-prompt-text-fill: #ffffff;"
+                                     unFocusColor="WHITE"/>
                     </children>
                     <VBox.margin>
                         <Insets bottom="20.0"/>
